# haskell-study-series

./: .dockerignore  .gitignore  LICENSE  PANDOC.md  README.md  default.nix  flake.nix
00-hello-world/: README.md
Docs/: IDIOMATIC_HASKELL_ARCHITECTURE_PATTERNS.md  IDIOMATIC_HASKELL_PROGRAMMING_STYLE.md
JupyterLab/: DemoHaskell.ipynb  README.org
learn-you-a-haskell-for-great-good/: README.md  learn-you-a-haskell-for-great-good.cabal
learn-you-a-haskell-for-great-good/app/: Main.hs
learn-you-a-haskell-for-great-good/app/Chapter02/: StartingOut.hs
learn-you-a-haskell-for-great-good/app/Chapter03/: TypesAndTypeclasses.hs
learn-you-a-haskell-for-great-good/app/Chapter04/: Guards.hs  PatternMatching.hs  SyntaxInFunctions.hs
learn-you-a-haskell-for-great-good/app/Chapter05/: Recursion.hs
learn-you-a-haskell-for-great-good/app/Chapter06/: .FunctionApplicationWithDollar.hs.swp  CurriedFunctions.hs  FunctionApplicationWithDollar.hs  HigherOrderFunctions.hs  Lambdas.hs  OnlyFoldsAndHorses.hs
learn-you-a-haskell-for-great-good/app/Chapter07/: Modules.hs
learn-you-a-haskell-for-great-good/app/Chapter07/Geometry/: Cube.hs  Cuboid.hs  Sphere.hs
learn-you-a-haskell-for-great-good/app/Chapter08/: .MakingOurOwnTypesAndTypeclasses.hs.swp  MakingOurOwnTypesAndTypeclasses.hs
learn-you-a-haskell-for-great-good/app/Chapter09/: .InputAndOutput.hs.swp  InputAndOutput.hs  haiku.txt
learn-you-a-haskell-for-great-good/app/Chapter10/: FunctionallySolvingProblems.hs  README.md
learn-you-a-haskell-for-great-good/app/Chapter11/: FunctorsApplicativeFunctorsAndMonoids.hs
(+1606 files in other folders)
