cabal-version:      2.4
name:               learn-you-a-haskell-for-great-good
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Mingyu Choo's algorithm

-- A longer description of the package.
description:        This is very basic algorithm code

-- A URL where users can report bugs.
bug-reports:        mingyuchoo@gmail.com

-- The license under which the package is released.
license:            MIT
author:             mingyuchoo
maintainer:         mingyuchoo@gmail.com

-- A copyright notice.
-- copyright:
category:           Algorithm

extra-source-files: CHANGELOG.md

executable learn-you-a-haskell-for-great-good
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Chapter02.StartingOut
        Chapter03.TypesAndTypeclasses
        Chapter04.PatternMatching
        Chapter04.Guards
        Chapter05.Recursion
        Chapter06.CurriedFunctions

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
